@@ -14,6 +14,8 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
+import os
+import time
 from bzrlib.selftest import TestCaseInTempDir
 
 
@@ -24,7 +26,9 @@ def sha1(t):
 
 
 def pause():
-    import time
+    if os.name == 'nt':
+        time.sleep(3)
+        return
     # allow it to stabilize
     start = int(time.time())
     while int(time.time()) == start:
